# pbl4

./: .gitignore  Dockerfile  FastApi.py  README.md  README.rst  block.py  create_db.py  db.py  doan.py  docker-compose.dev.yml  environment.yml  main.py  models.py  next.config.js  package-lock.json  package.json  pyproject.toml  regex.py  requirements.txt
.devcontainer/: Dockerfile  Dockerfile.dev  devcontainer.json  docker-compose.yml  poetry-setup.sh
HTML/: login.html
LoginForm/: login.sublime-workspace
backend/: .gitignore  Dockerfile  entrypoint.sh  environment.yml  mypy.ini  pyproject.toml  requirements.txt
backend/.devcontainer/: Dockerfile.dev  devcontainer.json  poetry-setup.sh
backend/alembic/: env.py
backend/alembic/versions/: 3d219dd502f6_first_revision.py
backend/app/: main.py
backend/app/api/: api.py
backend/app/api/routers/: history.py  torchserve_inference.py
backend/app/core/: config.py
backend/app/crud/: __init__.py  base.py  crud_content.py  crud_history.py
backend/app/db/: base.py  base_class.py  init_db.py
backend/app/models/: __init__.py  content.py  history.py
backend/app/schemas/: __init__.py  content.py  history.py
backend/scripts/: export-requirements.txt  format-imports.sh  lint.sh
components/: login.tsx  pagination.tsx  top_page.tsx
frontend/: .gitignore  package-lock.json  package.json
kubernetes/: model-inspect-pod.yaml  pvc.yaml
lib/: context.ts  firebase.ts
pages/: _app.tsx  _document.tsx  enter.tsx  home.tsx  index.tsx  login.tsx
script/: export.sh  type-check.sh
scripts/: docker-deploy.sh  (+2 more)
(+82 files in other folders)
