[tool.poetry]
name = "pbl4_backend"
version = "0.1.0"
description = ""
authors = ["vohoanglong01072001 <mamlong34@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
transformers = "^4.11.3"
fastapi = {extras = ["all"], version = "^0.70.0"}
torch = "^1.9.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
