[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["vohoanglong01072001 <mamlong34@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["all"], version = "^0.70.0"}
SQLAlchemy = "^1.4.27"
alembic = "^1.7.5"
psycopg2-binary = "^2.9.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.910"
black = "^21.11b1"
isort = "^5.10.1"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"
autoflake = "^1.4"
sqlalchemy-stubs = "^0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
